<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_articles">

    <fragment
        android:id="@+id/nav_articles"
        android:name="com.footballmania.ui.articles.ArticlesFragment"
        android:label="@string/menu_articles"
        tools:layout="@layout/fragment_articles" />

    <fragment
        android:id="@+id/nav_competitions"
        android:name="com.footballmania.ui.competitions.CompetitionsFragment"
        android:label="@string/menu_competitions"
        tools:layout="@layout/fragment_competitions" />

    <fragment
        android:id="@+id/nav_matches"
        android:name="com.footballmania.ui.matches.MatchesFragment"
        android:label="@string/menu_matches"
        tools:layout="@layout/fragment_matches" />

    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.footballmania.ui.favourites.FavouritesFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/nav_rules"
        android:name="com.footballmania.ui.rules.RulesFragment"
        android:label="@string/menu_rules"
        tools:layout="@layout/fragment_rules" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.footballmania.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.footballmania.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
</navigation>